@@ -4,8 +4,8 @@
    i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="title" i18n:translate="">Page</property>
  <property name="description"
-      i18n:translate="">A page in the site. Can contain rich text.</property>
- <property name="icon_expr">string:${portal_url}/document_icon.png</property>
+      i18n:translate=""></property>
+ <property name="icon_expr"></property>
  <property name="content_meta_type">ATDocument</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATDocument</property>
