@@ -4,8 +4,8 @@
    i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="title" i18n:translate="">Event</property>
  <property name="description"
-      i18n:translate="">Information about an upcoming event, which can be displayed in the calendar.</property>
- <property name="icon_expr">string:${portal_url}/event_icon.png</property>
+      i18n:translate="">Events can be shown in calendars.</property>
+ <property name="icon_expr"></property>
  <property name="content_meta_type">ATEvent</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATEvent</property>
