@@ -4,8 +4,8 @@
    i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="title" i18n:translate="">Folder</property>
  <property name="description"
-     i18n:translate="">A folder which can contain other items.</property>
- <property name="icon_expr">string:${portal_url}/folder_icon.png</property>
+     i18n:translate=""></property>
+ <property name="icon_expr"></property>
  <property name="content_meta_type">ATFolder</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATFolder</property>
