@@ -4,8 +4,8 @@
    i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="title" i18n:translate="">Image</property>
  <property name="description"
-      i18n:translate="">An image, which can be referenced in documents or displayed in an album.</property>
- <property name="icon_expr">string:${portal_url}/image_icon.png</property>
+      i18n:translate="">Images can be referenced in documents or displayed in an album.</property>
+ <property name="icon_expr"></property>
  <property name="content_meta_type">ATImage</property>
  <property name="product">plone.app.blob</property>
  <property name="factory">addATBlobImage</property>
