@@ -4,8 +4,8 @@
    i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="title" i18n:translate="">Large Folder</property>
  <property name="description"
-      i18n:translate="">A folder suitable for holding a very large number of items</property>
- <property name="icon_expr">string:${portal_url}/folder_icon.png</property>
+      i18n:translate="">A specialized folder for holding a very large number of items. (Normal folders can do this now, this exists for backwards compatibility and upgrade purposes only)</property>
+ <property name="icon_expr"></property>
  <property name="content_meta_type">ATBTreeFolder</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATBTreeFolder</property>
