@@ -4,8 +4,8 @@
    i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="title" i18n:translate="">Link</property>
  <property name="description"
-      i18n:translate="">A link to an internal or external resource.</property>
- <property name="icon_expr">string:${portal_url}/link_icon.png</property>
+      i18n:translate="">Links to an internal or external resource.</property>
+ <property name="icon_expr"></property>
  <property name="content_meta_type">ATLink</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATLink</property>
