@@ -4,8 +4,8 @@
    i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="title" i18n:translate="">News Item</property>
  <property name="description"
-     i18n:translate="">An announcement that will show up on the news portlet and in the news listing.</property>
- <property name="icon_expr">string:${portal_url}/newsitem_icon.png</property>
+     i18n:translate="">An announcement that will show up in news listings.</property>
+ <property name="icon_expr"></property>
  <property name="content_meta_type">ATNewsItem</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATNewsItem</property>
