@@ -4,8 +4,8 @@
    i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="title" i18n:translate=""></property>
  <property name="description"
-      i18n:translate="">The portal_type for the root object in a Plone system.</property>
- <property name="icon_expr">string:${portal_url}/site_icon.png</property>
+      i18n:translate="">The root object in a Plone site.</property>
+ <property name="icon_expr"></property>
  <property name="content_meta_type">Plone Site</property>
  <property name="product">CMFPlone</property>
  <property name="factory">manage_addSite</property>
