@@ -4,8 +4,8 @@
    i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="title" i18n:translate="">Collection</property>
  <property name="description"
-     i18n:translate="">An automatically updated stored search that can be used to display items matching criteria you specify.</property>
- <property name="icon_expr">string:${portal_url}/topic_icon.png</property>
+     i18n:translate="">An always-updated saved search that can be used to display items matching criteria you specify.</property>
+ <property name="icon_expr"></property>
  <property name="content_meta_type">ATTopic</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATTopic</property>
