@@ -68,12 +68,11 @@
                 <dt metal:define-macro="listitem"
                     tal:attributes="class python:test(item_type == 'Event', 'vevent', '')">
 
-                    <span class="summary"
-                          tal:attributes="class string:$item_type_class summary">
+                    <span class="summary">
                         <img tal:replace="structure item_icon/html_tag" />
                         <a href="#"
                            tal:attributes="href python:test(item_type in use_view_action, item_url+'/view', item_url);
-                                           class string:${item_wf_state_class} url"
+                                           class string:$item_type_class $item_wf_state_class url"
                            tal:content="item_title_or_id">
                             Item Title
                         </a>
