@@ -16,11 +16,11 @@
                     <metal:entry fill-slot="entry">
                 <div class="tileItem visualIEFloatFix vevent" 
                      tal:define="item_object item/getObject;"
-                     tal:attributes="class string:tileItem visualIEFloatFix vevent ${item_type_class}">
+                     tal:attributes="class string:tileItem visualIEFloatFix vevent">
 
                     <a href="#" 
                        tal:condition="exists:item_object/image_thumb"
-                       tal:attributes="href python:test(item_type in use_view_action, item_url+'/view', item_url);">
+                       tal:attributes="href python:test(item_type in use_view_action, item_url+'/view', item_url)">
                         <img src="" alt=""
                              tal:replace="structure python: path('nocall:item_object/tag')(scale='thumb', css_class='tileImage')" />
                     </a>
