@@ -41,24 +41,21 @@
                         tal:attributes="class python:test(oddrow, 'even', 'odd')">
 
                             <td>
-                                <span class=""
-                                      tal:attributes="class item_type_class">
-                                    <img width="16" height="16"
-                                         src="" alt=""
-                                         tal:condition="item_icon/url"
-                                         tal:attributes="src item_icon/url;
-                                                         alt item_icon/description;
-                                                         title item_icon/title;
-                                                         width item_icon/width;
-                                                         height item_icon/height;" />
-                                    <a href="#"
-                                       tal:attributes="href python:test(item_type in use_view_action, item_url+'/view', item_url);
-                                                       class string:${item_wf_state_class};
-                                                       title item_description;"
-                                       tal:content="item_title_or_id">
-                                        Item Title
-                                    </a>
-                                </span>
+                                <img width="16" height="16"
+                                     src="" alt=""
+                                     tal:condition="item_icon/url"
+                                     tal:attributes="src item_icon/url;
+                                                     alt item_icon/description;
+                                                     title item_icon/title;
+                                                     width item_icon/width;
+                                                     height item_icon/height;" />
+                                <a href="#"
+                                   tal:attributes="href python:test(item_type in use_view_action, item_url+'/view', item_url);
+                                                   class string:$item_wf_state_class $item_type_class;
+                                                   title item_description;"
+                                   tal:content="item_title_or_id">
+                                    Item Title
+                                </a>
                             </td>
 
                             <td tal:condition="show_about">
